dernier ds dernier commit

--- a/html4.html
+++ b/html4.html
@@ -8,5 +8,6 @@
 <body>
     <p>html4</p>
     <article>dernier commit avan de rendre l'exercice</article>
+    <article>dernier commit avan de rendre l'exercice</article>
 </body>
 </html>
